# english_voc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: crud.py  database.py  datamodel.py  models.py  quiz.py  services.py
data/: 02_create_table_voc.sql  03_feed_table_voc.sql  05_delete_table_voc.sql
script/: edit_word.py  gen_03_sql.py  merge_csv.py
sql_script/: 01_create_schema.sql  02_create_table_voc.sql  03_feed_table_voc.sql  04_reset_table_voc.sql
